# FAST-dependencies

./: CMakeLists.txt  ExternalDCMTK.cmake  ExternalFFmpeg.cmake  ExternalHDF5.cmake  ExternalJKQTPlotter.cmake  ExternalJPEGXL.cmake  ExternalLibJPEG.cmake  ExternalOpenCL.cmake  ExternalOpenIGTLink.cmake  ExternalOpenSlide.cmake  ExternalOpenVINO.cmake  ExternalQt5.cmake  ExternalQt6.cmake  ExternalRealSense.cmake  ExternalTIFF.cmake  ExternalTensorflow.cmake  ExternalZip.cmake  ExternalZlib.cmake  LICENSE  Macros.cmake  README.md  TensorflowConfigureCPU.sh
Clarius/: ClariusCast.hpp  ClariusCastImpl.cpp  ClariusCastImpl.hpp  ExternalClarius.cmake
Qt6/: docker-ubuntu-18.04.md  multimedia_configure.patch  qduplicatetracker.patch  v4l.patch
